[gd_scene load_steps=36 format=2]

[ext_resource path="res://Gunnkour/Characters/Player/Sprites/llegtop.png" type="Texture" id=1]
[ext_resource path="res://Gunnkour/Characters/Player/Sprites/head.png" type="Texture" id=2]
[ext_resource path="res://Gunnkour/Characters/Player/Sprites/rlegbot.png" type="Texture" id=3]
[ext_resource path="res://Gunnkour/Characters/Player/Sprites/llegbot.png" type="Texture" id=4]
[ext_resource path="res://Gunnkour/Characters/Player/Sprites/rlegtop.png" type="Texture" id=5]
[ext_resource path="res://Gunnkour/Characters/Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Gunnkour/Characters/Sounds/footstep.wav" type="AudioStream" id=7]
[ext_resource path="res://Gunnkour/Guns/Pistol/Pistol.tscn" type="PackedScene" id=8]
[ext_resource path="res://Gunnkour/Characters/Sounds/jump.wav" type="AudioStream" id=9]
[ext_resource path="res://Gunnkour/Guns/Shotgun/Shotgun.tscn" type="PackedScene" id=10]
[ext_resource path="res://Gunnkour/Guns/SMG/SMG.tscn" type="PackedScene" id=11]
[ext_resource path="res://Gunnkour/Guns/BulletCounter.tscn" type="PackedScene" id=12]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Run"

[sub_resource type="AnimationNodeTimeScale" id=5]

[sub_resource type="AnimationNodeBlendTree" id=6]
graph_offset = Vector2( -195, 58.5 )
nodes/Animation/node = SubResource( 4 )
nodes/Animation/position = Vector2( -180, 100 )
nodes/TimeScale/node = SubResource( 5 )
nodes/TimeScale/position = Vector2( 60, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Idle/node = SubResource( 2 )
states/Idle/position = Vector2( 192, 74 )
states/Run/node = SubResource( 3 )
states/Run/position = Vector2( 414, 21 )
states/Sprint/node = SubResource( 6 )
states/Sprint/position = Vector2( 515, 134 )
transitions = [ "Sprint", "Idle", SubResource( 7 ), "Idle", "Sprint", SubResource( 8 ), "Idle", "Run", SubResource( 9 ), "Run", "Idle", SubResource( 10 ), "Run", "Sprint", SubResource( 11 ), "Sprint", "Run", SubResource( 12 ) ]
start_node = "Idle"
graph_offset = Vector2( 23, -48 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("Head/LeftLeg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.24305, 6.38692 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LeftLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/RightLeg/RightKnee:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 6.03064 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/RightLeg/RightKnee:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head/LeftLeg/LeftKnee:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.0121646, 5.98894 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head/LeftLeg/LeftKnee:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Head:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Head/RightLeg:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.29361, 7.82892 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Head/RightLeg:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Head/LeftLeg/LeftKnee:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0121646, 5.98894 ), Vector2( 0.0121646, 5.98894 ), Vector2( 0.0121646, 5.98894 ), Vector2( 0.0121646, 5.98894 ), Vector2( 0.0121646, 5.98894 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/LeftLeg/LeftKnee:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/RightLeg:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.29361, 7.82892 ), Vector2( -1.29361, 7.82892 ), Vector2( -1.29361, 7.82892 ), Vector2( -1.29361, 7.82892 ), Vector2( -1.29361, 7.82892 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head/RightLeg:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -36.9693, 0.0, 44.0262, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Head/LeftLeg:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.24305, 6.38692 ), Vector2( 1.24305, 6.38692 ), Vector2( 1.24305, 6.38692 ), Vector2( 1.24305, 6.38692 ), Vector2( 1.24305, 6.38692 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Head/LeftLeg:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 39.2372, 0.0, -41.2664, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3.00666 ), Vector2( 0, 0 ), Vector2( 0, -3.10365 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Head:rotation_degrees")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Head/RightLeg/RightKnee:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6.03064 ), Vector2( 0, 6.03064 ), Vector2( 0, 6.03064 ), Vector2( 0, 6.03064 ), Vector2( 0, 6.03064 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Head/RightLeg/RightKnee:rotation_degrees")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "audio"
tracks/10/path = NodePath("Footstep")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.2, 0.6 )
}

[sub_resource type="RayShape2D" id=17]

[sub_resource type="AudioStreamSample" id=18]
data = PoolByteArray( 25, 25, 25, 25, 24, 24, 24, 24, 24, 24, 23, 23, 23, 23, 23, 22, 22, 22, 22, 22, 22, 21, 21, 21, 21, 21, 21, 20, 20, 20, 20, 20, 20, 19, 19, 19, 19, 19, 19, 19, 18, 18, 18, 18, 18, 5, 223, 223, 224, 224, 224, 224, 225, 225, 225, 225, 226, 226, 226, 226, 227, 227, 227, 227, 227, 228, 228, 228, 228, 229, 229, 229, 229, 229, 230, 230, 230, 230, 230, 231, 231, 231, 231, 231, 232, 232, 232, 232, 232, 233, 233, 233, 233, 233, 234, 234, 234, 234, 234, 234, 235, 235, 235, 235, 235, 235, 236, 236, 236, 236, 236, 236, 237, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 2, 40, 40, 39, 39, 39, 38, 38, 38, 37, 37, 37, 37, 36, 36, 36, 35, 35, 35, 35, 34, 34, 34, 33, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 31, 30, 30, 30, 30, 29, 29, 29, 29, 29, 28, 28, 9, 233, 233, 234, 234, 234, 234, 234, 234, 235, 235, 235, 235, 235, 235, 236, 236, 236, 236, 236, 236, 237, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 12, 43, 43, 42, 42, 42, 41, 41, 41, 40, 40, 40, 39, 39, 39, 39, 38, 38, 38, 37, 37, 37, 36, 36, 36, 36, 35, 35, 35, 34, 34, 34, 34, 33, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 31, 30, 5, 235, 236, 236, 236, 236, 236, 236, 237, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 19, 44, 43, 43, 43, 42, 42, 42, 41, 41, 41, 40, 40, 40, 39, 39, 39, 39, 38, 38, 38, 37, 37, 37, 36, 36, 36, 36, 35, 35, 35, 34, 34, 34, 34, 33, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 255, 236, 236, 236, 236, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 25, 44, 44, 43, 43, 43, 42, 42, 42, 41, 41, 41, 40, 40, 40, 39, 39, 39, 38, 38, 38, 37, 37, 37, 37, 36, 36, 36, 35, 35, 35, 35, 34, 34, 34, 33, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 249, 236, 236, 236, 237, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 250, 32, 44, 44, 43, 43, 43, 42, 42, 41, 41, 41, 41, 40, 40, 40, 39, 39, 39, 38, 38, 38, 37, 37, 37, 37, 36, 36, 36, 35, 35, 35, 35, 34, 34, 34, 33, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 242, 236, 236, 236, 237, 237, 237, 237, 237, 237, 238, 238, 238, 238, 238, 238, 238, 239, 239, 239, 239, 239, 239, 239, 239, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 33, 39, 38, 38, 38, 37, 37, 37, 36, 36, 36, 35, 35, 35, 34, 34, 34, 33, 33, 33, 32, 32, 32, 32, 31, 31, 31, 30, 30, 30, 30, 29, 29, 29, 29, 28, 28, 28, 27, 27, 27, 27, 26, 26, 26, 26, 239, 240, 240, 240, 240, 240, 240, 240, 241, 241, 241, 241, 241, 241, 241, 242, 242, 242, 242, 242, 242, 242, 242, 243, 243, 243, 243, 243, 243, 243, 243, 244, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 30, 29, 29, 29, 29, 28, 28, 28, 28, 27, 27, 27, 27, 26, 26, 26, 25, 25, 25, 25, 25, 24, 24, 24, 24, 23, 23, 23, 23, 22, 22, 22, 22, 22, 21, 21, 21, 21, 21, 20, 20, 20, 20, 20, 19, 15, 244, 244, 244, 244, 244, 244, 244, 244, 245, 245, 245, 245, 245, 245, 245, 245, 245, 245, 246, 246, 246, 246, 246, 246, 246, 246, 246, 246, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 247, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 0, 20, 20, 20, 20, 20, 19, 19, 19, 19, 19, 18, 18, 18, 18, 18, 17, 17, 17, 17, 17, 17, 16, 16, 16, 16, 16, 16, 15, 15, 15, 15, 15, 15, 14, 14, 14, 14, 14, 14, 14, 13, 13, 13, 13, 13, 7, 248, 248, 248, 248, 248, 248, 248, 248, 248, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 249, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 250, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 251, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 2, 11, 11, 11, 11, 11, 10, 10, 10, 10, 10, 10, 10, 10, 9, 9, 9, 9, 9, 9, 9, 9, 9, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 6, 6, 6, 2, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 252, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 253, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 254, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="RayShape2D" id=20]

[sub_resource type="CapsuleShape2D" id=21]

[sub_resource type="VisualShader" id=22]
graph_offset = Vector2( -601, 85 )

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 22 )

[node name="Player" type="RigidBody2D"]
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 10.0
script = ExtResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Sprint/TimeScale/scale = 1.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.1
playback_speed = 2.0
anims/Idle = SubResource( 15 )
anims/Run = SubResource( 16 )

[node name="CollisionFeet" type="CollisionShape2D" parent="."]
position = Vector2( -0.115013, -0.822968 )
scale = Vector2( 1.19495, 0.415041 )
shape = SubResource( 17 )

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 7.54237 )
stream = SubResource( 18 )
volume_db = -5.0

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 0.8

[node name="CollisionWall" type="CollisionShape2D" parent="."]
position = Vector2( 1.93859, 0.103797 )
rotation = 1.5708
scale = Vector2( 0.479141, 0.416201 )
shape = SubResource( 17 )

[node name="CollisionWall2" type="CollisionShape2D" parent="."]
position = Vector2( -2.05709, -0.104 )
rotation = -1.5708
scale = Vector2( 0.479141, 0.416201 )
shape = SubResource( 17 )

[node name="CollisionWall3" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.38452 )
rotation = 3.14159
scale = Vector2( 0.479141, 0.416201 )
shape = SubResource( 17 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -5.63854e-09, 0.140208 )
scale = Vector2( 0.446845, 0.4458 )
shape = SubResource( 19 )

[node name="GroundCheck" type="Area2D" parent="."]
position = Vector2( 0.153352, 3.5953 )
scale = Vector2( 0.413256, 0.367691 )

[node name="Ground_Collision" type="CollisionShape2D" parent="GroundCheck"]
position = Vector2( 0, 3.49523 )
scale = Vector2( 0.455418, 0.455418 )
shape = SubResource( 20 )

[node name="WallCheck" type="Area2D" parent="."]
position = Vector2( -0.0811062, -1.2977 )
scale = Vector2( 1.0474, 0.483046 )

[node name="Wall_Collision" type="CollisionShape2D" parent="WallCheck"]
position = Vector2( 0.00991489, 3.79741 )
scale = Vector2( 0.610329, 0.520513 )
shape = SubResource( 21 )

[node name="Head" type="Sprite" parent="."]
modulate = Color( 1, 1, 0, 1 )
scale = Vector2( 0.458223, 0.458223 )
texture = ExtResource( 2 )

[node name="LeftLeg" type="Sprite" parent="Head"]
material = SubResource( 23 )
position = Vector2( 1.24305, 6.38692 )
texture = ExtResource( 1 )
offset = Vector2( 0, 1 )

[node name="LeftKnee" type="Sprite" parent="Head/LeftLeg"]
material = SubResource( 23 )
position = Vector2( 0.0121646, 5.98894 )
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="RightLeg" type="Sprite" parent="Head"]
material = SubResource( 23 )
position = Vector2( -1.29361, 7.82892 )
texture = ExtResource( 5 )

[node name="RightKnee" type="Sprite" parent="Head/RightLeg"]
material = SubResource( 23 )
position = Vector2( 0, 6.03064 )
texture = ExtResource( 3 )

[node name="Shotgun" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 5.13494, 0.814539 )
scale = Vector2( 0.307238, 0.307238 )

[node name="Pistol" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 4.11612, 2.61566 )
scale = Vector2( 0.398543, 0.398543 )

[node name="SMG" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 2.83007, 1.83431 )
scale = Vector2( 0.276006, 0.276006 )

[node name="Control2" parent="." instance=ExtResource( 12 )]
modulate = Color( 0.294118, 0.0862745, 0.0862745, 1 )
margin_left = -32.6564
margin_top = -15.0953
margin_right = -32.6564
margin_bottom = -15.0953
rect_scale = Vector2( 0.563026, 0.563026 )

[node name="Control" parent="." instance=ExtResource( 12 )]
margin_left = -32.6216
margin_top = -16.0167
margin_right = -32.6216
margin_bottom = -16.0167
rect_scale = Vector2( 0.563026, 0.563026 )
[connection signal="body_entered" from="GroundCheck" to="." method="_on_GroundCheck_body_entered"]
[connection signal="body_exited" from="GroundCheck" to="." method="_on_GroundCheck_body_exited"]
[connection signal="body_entered" from="WallCheck" to="." method="_on_WallCheck_body_entered"]
[connection signal="body_exited" from="WallCheck" to="." method="_on_WallCheck_body_exited"]
